# RBAC-algorithm

./: .gitignore  404.html  ADAPTERS.md  CONTRIBUTING.md  GIT_GUIDE.md  LICENSE  PERFORMANCE_REPORT.md  PRIORITY1_COMPLETE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  STATUS.md  STRUCTURE.md  index.html  opensearch.xml  playground.html  pytest.ini  requirements-dev.txt  requirements.txt  search.html  setup.py  sitemap.xml  start-docs.bat  start-docs.sh
.github/: BRANCH_PROTECTION.md  CODEOWNERS
.github/workflows/: ci.yml  security.yml
.quality/: .pylintrc  pyproject.toml  requirements-dev.txt
.quality/sonarqube/: sonar-project.properties  sonar-scan.bat  sonar-scan.sh
assets/css/: styles.64334e30.css
assets/js/: 0480b142.c79300cc.js  0e384e19.3547bf25.js  0e384e19.cf56fc18.js  0f265c92.9b359580.js  0f265c92.e5b9d76f.js  1602d1a8.2968d601.js  17896441.d69c23a2.js  1a4e3797.da3ad533.js  1f391b9e.daa40f5d.js  20e76c5f.150fa56b.js  2237.fc5751e0.js  2693.71f0b144.js  303fa33b.acba6757.js  3457.c8f7c744.js  39a14576.25838a7b.js  3ddfdb09.7a00b3e0.js  416.8100673f.js  4d54d076.c99f8fb5.js  4e61bb45.aa485c97.js  54f44165.6b3a87b8.js  5829d38f.064e955e.js  588bd741.bff15a70.js  58a5307b.82ba6a49.js  59328bc8.35e07750.js  599cb1ad.4606d9a9.js  5ac6056a.6f5c0b08.js  5e93ff68.edea7fbc.js  5e95c892.d2463ead.js  65df3d35.218e826a.js  6837.05753112.js  6bb41b40.60764c1f.js  6bb41b40.ad279820.js  73602399.22ded597.js  78389051.5eb34039.js  790132bf.d1c5d3b0.js  79a059d5.ef3b5eca.js  801f3f5d.2efac3d1.js  801f3f5d.cea40add.js  82c203f6.37367ff5.js  85b8c529.469e9192.js  (+26 more)
benchmarks/: performance_benchmark.py  quick_benchmark.py
docs/: .gitignore  COMPLETED.md  DOCUMENTATION.md  FIX_SUMMARY.md  README.md  TESTING.md  contributing.html  docusaurus.config.js  faq.html  intro.html  package.json  sidebars.js
docs/adapters/: csharp.html  go.html  java.html  javascript.html  overview.html  python.html
docs/advanced/: architecture.html  extending.html  migration.html  security.html
docs/api/: engine.html  models.html  overview.html  protocols.html  rbac-api.html  storage.html
docs/concepts/: abac.html  multi-tenancy.html  overview.html  permissions.html  protocols.html  rbac-basics.html  (+1 more)
documentation/: README.md
examples/: README.md  abac_example.py  basic_usage.py  permissions_matrix_example.py
img/: DIAGRAM_README.md  LOGO_README.md  logo-preview.html
repo-health/: .gitignore  README.md
schemas/: authorization-request.schema.json  authorization-response.schema.json  permission.schema.json  role.schema.json  user.schema.json
scripts/: scan-vulnerabilities.ps1  scan-vulnerabilities.sh  start-docs.bat  start-docs.sh  validate-code.bat  validate-code.sh  validate-priority1.ps1  validate-priority1.sh
temp/: CLEANUP_REPORT.md  GETTING_STARTED.md  README.md  STRUCTURE.md  ~$NKEDIN_ARTICLE.docx
test-apps/: README.md
tests/: PRIORITY1_README.md  __init__.py  conftest.py  test_models.py  test_permissions_matrix.py  test_rbac.py  test_sqlalchemy_storage.py  test_storage.py
(+127 files in other folders)
